--- a/css/game.css
+++ b/css/game.css
@@ -10,7 +10,7 @@
   box-sizing: border-box;
   border-radius: 5px;
   color: white;
-  font-size: 24pt;
+  font-size: 3.5vw;
   text-align: center;
   text-shadow: 2px 2px 2px rgba(0,0,0,0.2);
 
@@ -19,7 +19,7 @@
 .miss {
   background-color: red;
   color: white;
-  font-size: 1em;
+  font-size: 3vw;
   text-align: center;
 }
 
