--- a/css/style_d.css
+++ b/css/style_d.css
@@ -3,48 +3,31 @@ body    {
     padding: 0;
     box-sizing: border-box;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+}
+.main-field {
     background-color: #29343d;
-    text-align: center;
-    color: #fff;
 }
 h3  {
-    margin: 2.3vw auto 1vw;
-    font-size: 5rem;
     text-transform: uppercase;
     font-weight: bold;
-    text-shadow: 0 0 30px rgba(4,137,255);
-}
-h4  {
-    font-size: 3.5rem;
-    padding-bottom: 20px;
-}
-.btn-lg    {
-    margin-top: 1vw;
-    padding: 2rem 1rem;
-    font-size: 3.5rem;
-    border-radius: 1rem;
-    box-shadow: 0 0 20px rgba(255,240,180,.8);
 }
 .btn-outline-secondary {
     color: #0489ff;
     border-color: #6c757d;
 }
 .btn {
-    font-size: 2.2vw;
+    margin-bottom: 3vw;
     font-weight: bolder;
+    box-shadow: 0 0 20px rgba(255,240,180,.8);
 }
 
 .central-field  {
-    width: 55%;
     margin: auto;
+    text-align: center;
+    color: #fff;
 }
 .page-wrapper {    
     display: grid;
-    grid-template-columns: repeat(6, minmax(100px, 7.22vw));
-    grid-template-rows: repeat(6, minmax(100px, 7.22vw));
-    grid-gap: 2vw;
-    margin-top: 1vw;
-    margin-bottom: 2vw;
 }
 .game-field {
     background-color: bisque;
@@ -53,21 +36,182 @@ h4  {
 }
 .target, .miss {
     cursor: pointer;
-    border-radius: 2vw;
     color: white;
     text-align: center;
-    text-shadow: 0 0 10px rgba(0,0,0,0.8);
-    box-shadow: 0 0 30px rgba(255,240,180,.8);
 }
 .target {
-    padding-top: .8vw;
     background-color: #00FF7F;
-    font-size: 3.2vw;
     font-weight: 500;
 }
 .miss {
-    padding-top: 1.5vw;
     background-color: red;
-    font-size: 2vw;
     font-weight: bolder;
+}
+
+/* **Smarphones Vertical and Horisontal** */
+@media screen and (min-width: 320.02px) and (max-width: 480px) {
+    .central-field  {
+        width: 49%;
+    }
+    h3  {
+        margin: 0 auto 1em;
+        padding-top: 1em;
+        font-size: 0.8rem;
+        text-shadow: 0 0 15px rgb(235, 255, 51);
+    }
+    h4  {
+        font-size: 0.4rem;
+        padding-bottom: 5px;
+    }
+    .page-wrapper {    
+        grid-template-columns: repeat(6, minmax(20px, 7.22vw));
+        grid-template-rows: repeat(6, minmax(20px, 7.22vw));
+        grid-gap: 0.3em;
+        margin-top: 0.5em;
+        margin-bottom: 1em;
+    }
+    .btn-lg    {
+        margin-top: 0;
+        padding: 0.3em 0.2em;
+        font-size: 0.7rem;
+        border-radius: 0.3em;
+    }
+    .target, .miss {
+        border-radius: 1vw;
+        text-shadow: 0 0 10px rgba(0,0,0,0.8);
+        box-shadow: 0 0 30px rgba(255,240,180,.8);
+    }
+    .target {
+        padding-top: 0.8vw;
+        font-size: 3.2vw;
+    }
+    .miss {
+        padding-top: 1.5vw;
+        font-size: 2vw;
+    }
+}
+/* **Tablets** */
+@media screen and (min-width: 480.02px) and (max-width: 767.98px) {
+    .central-field  {
+        width: 60%;
+    }
+    h3  {
+        margin: 0 auto 0.3em;
+        padding-top: 1em;
+        font-size: 1.3rem;
+        text-shadow: 0 0 15px rgb(187, 51, 255);
+    }
+    h4  {
+        font-size: 0.8rem;
+        padding-bottom: 15px;
+    }
+    .page-wrapper {    
+        grid-template-columns: repeat(6, minmax(40px, 9vw));
+        grid-template-rows: repeat(6, minmax(40px, 9vw));
+        grid-gap: 0.4em;
+        margin-top: 0.5em;
+        margin-bottom: 1em;
+    }
+    .btn-lg    {
+        margin-top: 1vw;
+        padding: 0.5em 0.5em;
+        font-size: 1rem;
+        border-radius: 0.5em;
+    }
+    .target, .miss {
+        border-radius: 2vw;
+        text-shadow: 0 0 8px rgba(0,0,0,0.8);
+        box-shadow: 0 0 5px rgba(255,240,180,.8);
+    }
+    .target {
+        padding-top: 1vw;
+        font-size: 4vw;
+    }
+    .miss {
+        padding-top: 2.3vw;
+        font-size: 2vw;
+    }
+}
+@media screen and (min-width: 768px) and (max-width: 1439.98px) {
+    .central-field  {
+        width: 54%;
+    }
+    h3  {
+        margin: 0 auto 0.3em;
+        padding-top: 1em;
+        font-size: 1.7rem;
+        text-shadow: 0 0 30px rgb(4, 137, 255);
+    }
+    h4  {
+        font-size: 1rem;
+        padding-bottom: 15px;
+    }
+    .page-wrapper {    
+        grid-template-columns: repeat(6, minmax(50px, 8vw));
+        grid-template-rows: repeat(6, minmax(50px, 8vw));
+        grid-gap: 0.5em;
+        margin-top: 1vw;
+        margin-bottom: 2vw;
+    }
+    .btn-lg    {
+        margin-top: 1vw;
+        padding: 0.5em 0.5em;
+        font-size: 1.3rem;
+        border-radius: 0.7em;
+    }
+    .target, .miss {
+        border-radius: 2vw;
+        text-shadow: 0 0 15px rgba(0,0,0,0.8);
+        box-shadow: 0 0 15px rgba(255,240,180,.8);
+    }
+    .target {
+        padding-top: 0.5vw;
+        font-size: 4vw;
+    }
+    .miss {
+        padding-top: 2vw;
+        font-size: 2vw;
+    }
+}
+/* **Desktops and Wide Screen Devices** */
+@media screen and (min-width: 1440px) {
+    .central-field  {
+        width: 55%;
+    }
+    h3  {
+        margin: 0 auto 0.3em;
+        padding-top: 1em;
+        font-size: 2rem;
+        text-shadow: 0 0 30px rgb(4, 137, 255);
+    }
+    h4  {
+        font-size: 1rem;
+        padding-bottom: 20px;
+    }
+    .page-wrapper {    
+        grid-template-columns: repeat(6, minmax(50px, 8vw));
+        grid-template-rows: repeat(6, minmax(50px, 8vw));
+        grid-gap: 0.5em;
+        margin-top: 1vw;
+        margin-bottom: 2vw;
+    }
+    .btn-lg    {
+        margin-top: 1vw;
+        padding: 0.5em 0.5em;
+        font-size: 1.5rem;
+        border-radius: 1em;
+    }
+    .target, .miss {
+        border-radius: 2vw;
+        text-shadow: 0 0 15px rgba(0,0,0,0.8);
+        box-shadow: 0 0 20px rgba(255,240,180,.8);
+    }
+    .target {
+        padding-top: 1.1vw;
+        font-size: 4vw;
+    }
+    .miss {
+        padding-top: 1.5vw;
+        font-size: 2vw;
+    }
 }
